colcon_ws/log/build_2025-05-30_17-09-04/volcano_ark_ros/stderr.log
  File "/root/colcon_ws/install/volcano_ark_ros/lib/python3.10/site-packages/volcano_ark_ros/originman_action_node.py", line 99
    ）
    ^
SyntaxError: invalid character '）' (U+FF09)

